# cambridge-lang

./: .gitignore  Makefile  README.md  cambridge  cambridge-lsp  cambridge_0.0.2_amd64.snap  go.mod  snapcraft.yaml
.github/formula/: cambridge-lsp.rb.template  cambridge.rb.template
.github/workflows/: release.yml
ast/: ast.go
build_assets/: cambridge-linux-amd64  cambridge-linux-arm64  cambridge-lsp-linux  cambridge-lsp-macos-arm64  cambridge-lsp-macos-intel  cambridge-macos-arm64  cambridge-macos-intel  cambridge-vscode-0.0.2.vsix  cambridge-vscode-0.1.0.vsix
builtins/: builtins.go
cmd/cambridge/: main.go
cmd/cambridge-lsp/: main.go
examples/: arrays.pseudo  dates.pseudo  fileio.pseudo  functions.pseudo  hello.pseudo  loops.pseudo  oop.pseudo  records.pseudo  selection.pseudo  strings.pseudo  tictactoe.pseudo  variables.pseudo
interpreter/: environment.go  interpreter.go  object.go
lexer/: lexer.go
parser/: parser.go
snap/: snapcraft.yaml
tree-sitter-cambridge/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-cambridge/bindings/c/: tree-sitter-cambridge.pc.in
tree-sitter-cambridge/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-cambridge/bindings/node/: binding.cc
tree-sitter-cambridge/bindings/python/tree_sitter_cambridge/: __init__.py  binding.c
tree-sitter-cambridge/bindings/rust/: build.rs  lib.rs
tree-sitter-cambridge/bindings/swift/TreeSitterCambridge/: cambridge.h
tree-sitter-cambridge/src/: grammar.json  node-types.json  parser.c
(+27 files in other folders)
